# crypto_model

./: .env  AAPL_headline_cleaned.csv  AAPL_price_sentiment.csv  AAPL_summary_cleaned.csv  AMD_price_sentiment.csv  AMZN_headline_cleaned.csv  AMZN_price_sentiment.csv  AMZN_summary_cleaned.csv  BA_price_sentiment.csv  DIS_price_sentiment.csv  Dockerfile  GOOGL_headline_cleaned.csv  GOOGL_price_sentiment.csv  GOOGL_summary_cleaned.csv  INTC_price_sentiment.csv  JPM_price_sentiment.csv  META_headline_cleaned.csv  META_price_sentiment.csv  META_summary_cleaned.csv  MSFT_headline_cleaned.csv  MSFT_price_sentiment.csv  MSFT_summary_cleaned.csv  NFLX_price_sentiment.csv  NKE_headline_cleaned.csv  NKE_price_sentiment.csv  NKE_summary_cleaned.csv  NVDA_headline_cleaned.csv  NVDA_price_sentiment.csv  NVDA_summary_cleaned.csv  README.md  TSLA_headline_cleaned.csv  TSLA_price_sentiment.csv  TSLA_summary_cleaned.csv  V_price_sentiment.csv  alpaca_app.py  alpaca_trading.py  api_call.py  api_call2.py  app.py  apple_price_sentiment_360d.csv  (+44 more)
.github/workflows/: alpaca_trading.yml  crypto_pipeline.yml  push_model.yml
mlruns/.trash/395100486848852635/: meta.yaml
mlruns/.trash/439474085184946114/: meta.yaml
mlruns/.trash/660364100424322153/: meta.yaml
mlruns/126201173998456926/: meta.yaml
mlruns/126201173998456926/0031b893dec84b999a7001530bac42fd/: meta.yaml
mlruns/126201173998456926/0a978772d27d49d3b98386e0b221af38/: meta.yaml
mlruns/126201173998456926/15589a3c92694ea783a85296274bee22/: meta.yaml
mlruns/126201173998456926/1d1c99fc11984892a11eb301cd1c5c86/: meta.yaml
mlruns/126201173998456926/2d56da7c41e04f59a843a4ca9b6497f0/: meta.yaml
mlruns/126201173998456926/3ea5d75393bf41ddb7eac973844201ad/: meta.yaml
mlruns/126201173998456926/443442f9e8954fda93bfa8322d223e4e/: meta.yaml
mlruns/126201173998456926/4e3a63d12e1c45d291fa2baa9e3e0a3c/: meta.yaml
mlruns/126201173998456926/51688bb36564411aabda68380dcbf65b/: meta.yaml
mlruns/126201173998456926/59515911286348a18e6a0ee0770fc938/: meta.yaml
mlruns/126201173998456926/6501ca3a55ba4f098cd967b9d43c905d/: meta.yaml
mlruns/126201173998456926/6697458eba9444778277601d4aa278d5/: meta.yaml
mlruns/126201173998456926/7d7b89c7b3bd419cbd90d14475bf7d8f/: meta.yaml
mlruns/126201173998456926/7e11cfdecd79450db169928dd8a4a50b/: meta.yaml
mlruns/126201173998456926/8035d5c090d247bb8916150c9b543e3f/: meta.yaml
mlruns/126201173998456926/a8617d46125847cbb7874671c717f54c/: meta.yaml
mlruns/126201173998456926/bad3e0496c8e456098445e3d223b8373/: meta.yaml
mlruns/126201173998456926/c3b49afcd6ea480e8b50adeee90009bf/: meta.yaml
mlruns/126201173998456926/d378e84f53d34dad971f57bd1afaee04/: meta.yaml
mlruns/126201173998456926/dc4cdb1a45d34f3ba26b5e220d352e70/: meta.yaml
mlruns/126201173998456926/dd098a16df974b9494534d36421f5fd9/: meta.yaml
mlruns/126201173998456926/de10c9e42bdb47a1b855f4339d19913b/: meta.yaml
mlruns/126201173998456926/e4c0d4b09cfd4e6896480bbad241b165/: meta.yaml
mlruns/126201173998456926/f48efffe33ac4cb79f980bd919c5bcd9/: meta.yaml
mlruns/126201173998456926/fa94d0e6fb81489a80f69454cc579b16/: meta.yaml
mlruns/134390433828460059/: meta.yaml
mlruns/149976084723752014/: meta.yaml
mlruns/167937576762462685/: meta.yaml
mlruns/178195208134065962/: meta.yaml
mlruns/202430322454522210/: meta.yaml
mlruns/204501807674707324/: meta.yaml
mlruns/262556122767594244/: meta.yaml
mlruns/278385327046813530/: meta.yaml
mlruns/281983976888186597/: meta.yaml
mlruns/305398835049489185/: meta.yaml
mlruns/335822610039237082/: meta.yaml
mlruns/363836833040146164/: meta.yaml
mlruns/368787946698016697/: meta.yaml
mlruns/375272536411243195/: meta.yaml
mlruns/414237749035960062/: meta.yaml
mlruns/443642650392367388/: meta.yaml
mlruns/458479087270231997/: meta.yaml
mlruns/460131098011352713/: meta.yaml
mlruns/479952990417285714/: meta.yaml
mlruns/486093595827099786/: meta.yaml
mlruns/495499973532785403/: meta.yaml
mlruns/515759688606582510/: meta.yaml
mlruns/517643302136057316/: meta.yaml
mlruns/533423262789988883/: meta.yaml
mlruns/555129460130675546/: meta.yaml
mlruns/559584662416649697/: meta.yaml
mlruns/587300990736409416/: meta.yaml
mlruns/630279195133962014/: meta.yaml
mlruns/648936514965444787/: meta.yaml
mlruns/684635725550675261/: meta.yaml
mlruns/689827786584348948/: meta.yaml
mlruns/699828771721010356/: meta.yaml
mlruns/700963635651280293/: meta.yaml
mlruns/703149480203922549/: meta.yaml
mlruns/713932826651775098/: meta.yaml
mlruns/724421613315109318/: meta.yaml
mlruns/730626367724332561/: meta.yaml
mlruns/735094939627340738/: meta.yaml
mlruns/748051548809373692/: meta.yaml
mlruns/763494798982578526/: meta.yaml
mlruns/764195680350938765/: meta.yaml
mlruns/829956239135233227/: meta.yaml
mlruns/830111435157421874/: meta.yaml
mlruns/836541250896402689/: meta.yaml
mlruns/837918948565580196/: meta.yaml
mlruns/870025328328077837/: meta.yaml
mlruns/871195560552074513/: meta.yaml
mlruns/903630707481866266/: meta.yaml
mlruns/909183755909916072/: meta.yaml
mlruns/924329800074758767/: meta.yaml
mlruns/981315507430812874/: meta.yaml
mlruns/986574245943130058/: meta.yaml
mlruns/987438707044912639/: meta.yaml
mlruns/992502834065179362/: meta.yaml
mlruns/998740484702081765/: meta.yaml
stock_csvs/: AAPL_price_sentiment.csv  AMD_price_sentiment.csv  AMZN_price_sentiment.csv  BAC_price_sentiment.csv  BA_price_sentiment.csv  COST_price_sentiment.csv  CVX_price_sentiment.csv  DIS_price_sentiment.csv  GOOGL_price_sentiment.csv  IBM_price_sentiment.csv  INTC_price_sentiment.csv  JPM_price_sentiment.csv  KO_price_sentiment.csv  MCD_price_sentiment.csv  META_price_sentiment.csv  MRK_price_sentiment.csv  MSFT_price_sentiment.csv  NFLX_price_sentiment.csv  NKE_price_sentiment.csv  NVDA_price_sentiment.csv  ORCL_price_sentiment.csv  PEP_price_sentiment.csv  PFE_price_sentiment.csv  PYPL_price_sentiment.csv  SNOW_price_sentiment.csv  TSLA_price_sentiment.csv  UNH_price_sentiment.csv  V_price_sentiment.csv  WMT_price_sentiment.csv  XOM_price_sentiment.csv
(+30441 files in other folders)
