[project]
name = "crypto-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "absl-py (==2.1.0)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.11.15)",
    "aiosignal (==1.3.2)",
    "alembic (==1.15.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.7.0)",
    "appnope (==0.1.4)",
    "argon2-cffi (==23.1.0)",
    "argon2-cffi-bindings (==21.2.0)",
    "arrow (==1.3.0)",
    "asttokens (==3.0.0)",
    "astunparse (==1.6.3)",
    "async-lru (==2.0.4)",
    "attrs (==24.2.0)",
    "babel (==2.16.0)",
    "beautifulsoup4 (==4.12.3)",
    "bleach (==6.2.0)",
    "blinker (==1.9.0)",
    "cachetools (==5.5.2)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "chardet (==5.2.0)",
    "charset-normalizer (==3.4.0)",
    "click (==8.1.8)",
    "cloudpickle (==3.1.1)",
    "colorlog (==6.9.0)",
    "comm (==0.2.2)",
    "contourpy (==1.3.1)",
    "cycler (==0.12.1)",
    "databricks-sdk (==0.48.0)",
    "datasets (==3.5.0)",
    "debugpy (==1.8.9)",
    "decorator (==5.1.1)",
    "defusedxml (==0.7.1)",
    "deprecated (==1.2.18)",
    "dill (==0.3.8)",
    "distlib (==0.3.9)",
    "docker (==7.1.0)",
    "executing (==2.1.0)",
    "fastapi (==0.115.12)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "flask (==3.1.0)",
    "flatbuffers (==25.2.10)",
    "fonttools (==4.55.3)",
    "fqdn (==1.5.1)",
    "frozendict (==2.4.6)",
    "frozenlist (==1.5.0)",
    "fsspec (==2024.12.0)",
    "gast (==0.6.0)",
    "gensim (==4.3.3)",
    "gitdb (==4.0.12)",
    "gitpython (==3.1.44)",
    "google-auth (==2.38.0)",
    "google-pasta (==0.2.0)",
    "graphene (==3.4.3)",
    "graphql-core (==3.2.6)",
    "graphql-relay (==3.2.0)",
    "grpcio (==1.70.0)",
    "gunicorn (==23.0.0)",
    "h11 (==0.14.0)",
    "h5py (==3.13.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "huggingface-hub (==0.30.1)",
    "idna (==3.10)",
    "imbalanced-learn (==0.13.0)",
    "importlib-metadata (==8.6.1)",
    "ipykernel (==6.29.5)",
    "ipython (==8.30.0)",
    "ipywidgets (==8.1.5)",
    "isoduration (==20.11.0)",
    "itsdangerous (==2.2.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.4)",
    "joblib (==1.4.2)",
    "json5 (==0.10.0)",
    "jsonpointer (==3.0.0)",
    "jsonschema (==4.23.0)",
    "jsonschema-specifications (==2024.10.1)",
    "jupyter (==1.1.1)",
    "jupyter-console (==6.6.3)",
    "jupyter-events (==0.10.0)",
    "jupyter-lsp (==2.2.5)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.7.2)",
    "jupyter-server (==2.14.2)",
    "jupyter-server-terminals (==0.5.3)",
    "jupyterlab (==4.3.2)",
    "jupyterlab-pygments (==0.3.0)",
    "jupyterlab-server (==2.27.3)",
    "jupyterlab-widgets (==3.0.13)",
    "keras (==3.9.0)",
    "kiwisolver (==1.4.8)",
    "libclang (==18.1.1)",
    "llvmlite (==0.44.0)",
    "mako (==1.3.9)",
    "markdown (==3.7)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.10.0)",
    "matplotlib-inline (==0.1.7)",
    "mdurl (==0.1.2)",
    "mistune (==3.0.2)",
    "mizani (==0.13.1)",
    "ml-dtypes (==0.4.1)",
    "mlflow (==2.21.2)",
    "mlflow-skinny (==2.21.2)",
    "multidict (==6.3.0)",
    "multiprocess (==0.70.16)",
    "multitasking (==0.0.11)",
    "mysql-connector-python (==8.0.32)",
    "namex (==0.0.8)",
    "nbclient (==0.10.1)",
    "nbconvert (==7.16.4)",
    "nbformat (==5.10.4)",
    "nest-asyncio (==1.6.0)",
    "nltk (==3.9.1)",
    "notebook (==7.3.1)",
    "notebook-shim (==0.2.4)",
    "numba (==0.61.2)",
    "numpy (==1.26.4)",
    "opentelemetry-api (==1.31.1)",
    "opentelemetry-sdk (==1.31.1)",
    "opentelemetry-semantic-conventions (==0.52b1)",
    "opt-einsum (==3.4.0)",
    "optree (==0.14.1)",
    "optuna (==4.3.0)",
    "overrides (==7.7.0)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "pandocfilters (==1.5.1)",
    "parso (==0.8.4)",
    "patsy (==1.0.1)",
    "peewee (==3.17.9)",
    "pexpect (==4.9.0)",
    "pillow (==11.0.0)",
    "platformdirs (==4.3.6)",
    "plotnine (==0.14.5)",
    "prometheus-client (==0.21.1)",
    "prompt-toolkit (==3.0.48)",
    "propcache (==0.3.1)",
    "protobuf (==3.20.3)",
    "psutil (==6.1.0)",
    "ptyprocess (==0.7.0)",
    "pure-eval (==0.2.3)",
    "pyarrow (==19.0.1)",
    "pyasn1 (==0.6.1)",
    "pyasn1-modules (==0.4.2)",
    "pycparser (==2.22)",
    "pydantic (==2.11.0)",
    "pydantic-core (==2.33.0)",
    "pygments (==2.18.0)",
    "pyparsing (==3.2.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-json-logger (==2.0.7)",
    "pytz (==2024.2)",
    "pyyaml (==6.0.2)",
    "pyzmq (==26.2.0)",
    "referencing (==0.35.1)",
    "regex (==2024.11.6)",
    "requests (==2.32.3)",
    "rfc3339-validator (==0.1.4)",
    "rfc3986-validator (==0.1.1)",
    "rich (==13.9.4)",
    "rpds-py (==0.22.3)",
    "rsa (==4.9)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.13.1)",
    "seaborn (==0.13.2)",
    "send2trash (==1.8.3)",
    "shap (==0.47.2)",
    "six (==1.17.0)",
    "sklearn-compat (==0.1.3)",
    "slicer (==0.0.8)",
    "smart-open (==7.1.0)",
    "smmap (==5.0.2)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.6)",
    "sqlalchemy (==2.0.40)",
    "sqlparse (==0.5.3)",
    "stack-data (==0.6.3)",
    "starlette (==0.46.1)",
    "statsmodels (==0.14.4)",
    "tensorboard (==2.18.0)",
    "tensorboard-data-server (==0.7.2)",
    "tensorflow (==2.18.0)",
    "tensorflow-io-gcs-filesystem (==0.37.1)",
    "termcolor (==2.5.0)",
    "terminado (==0.18.1)",
    "threadpoolctl (==3.5.0)",
    "tinycss2 (==1.4.0)",
    "tornado (==6.4.2)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "types-python-dateutil (==2.9.0.20241206)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.2)",
    "uri-template (==1.3.0)",
    "urllib3 (==2.2.3)",
    "uvicorn (==0.34.0)",
    "virtualenv (==20.30.0)",
    "wcwidth (==0.2.13)",
    "webcolors (==24.11.1)",
    "webencodings (==0.5.1)",
    "websocket-client (==1.8.0)",
    "werkzeug (==3.1.3)",
    "widgetsnbextension (==4.0.13)",
    "wrapt (==1.17.2)",
    "xxhash (==3.5.0)",
    "yarl (==1.18.3)",
    "yfinance (==0.2.55)",
    "zipp (==3.21.0)",
    "pandas-market-calendars (==4.4)",
    "alpha-vantage (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
